--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -2,8 +2,7 @@ name: Daily Fact Check Update
 
 on:
   schedule:
-    - cron: '30 23 * * *'  # 매일 UTC 23시 30분 (한국 시간 오전 8시 
-30분)에 실행
+    - cron: '30 23 * * *'  # 매일 UTC 23시 30분 (한국 시간 오전 8시 30분)에 실행
   workflow_dispatch:  # 수동 실행 옵션도 추가
 
 jobs:
@@ -33,7 +32,5 @@ jobs:
           git config --global user.name 'Fact Check Bot'
           git config --global user.email 'factcheck-bot@example.com'
           git add index.html
-          git commit -m "Daily fact check update: $(date +'%Y-%m-%d')" || 
-echo "No changes to commit"
+          git commit -m "Daily fact check update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git push
-
