--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -2,35 +2,42 @@ name: Daily Fact Check Update
 
 on:
   schedule:
-    - cron: '30 23 * * *'
-  workflow_dispatch:
+    - cron: '0 1 * * *'  # 매일 UTC 01:00 (한국 시간으로는 오전 10시) 실행
+  workflow_dispatch:  # 수동 실행 옵션 추가
 
 jobs:
   update-fact-checks:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 newspaper3k openai
-
-      - name: Run fact check update script
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: python scripts/update_fact_checks.py
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'Fact Check Bot'
-          git config --global user.email 'factcheck-bot@example.com'
-          git add index.html
-          git commit -m "Daily fact check update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        repository: redtable16/aifact
+        token: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4 newspaper3k openai feedparser
+    
+    - name: Update fact checks
+      run: python scripts/update_fact_checks.py
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+    
+    - name: Configure Git
+      run: |
+        git config --global user.name 'Fact Check Bot'
+        git config --global user.email 'factcheck-bot@example.com'
+    
+    - name: Commit and push changes
+      run: |
+        git add index.html
+        git commit -m "Daily fact check update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
+        git push
